xmldiff (0.6.8-2) unstable; urgency=low

  * updated standards to 3.7.2
  * use debhelper 5

 -- Alexandre Fayolle <afayolle@debian.org>  Mon, 22 May 2006 12:08:40 +0200

xmldiff (0.6.8-1) unstable; urgency=low

  * New upstream release, fixing 64bit cleanness issues

 -- Alexandre Fayolle <afayolle@debian.org>  Wed, 29 Jun 2005 08:52:11 +0200

xmldiff (0.6.7-1) unstable; urgency=low

  * New upstream release
    - Fixes xupdate:move command problem (closes: #275750)
    - small improvments / reorganization
  * Update copyright file
  * Add an empty line at the bottom of watch
  * Fix some encoding problem in this file (latin1 instead of utf-8)
  
 -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue,  3 May 2005 17:41:09 +0200

xmldiff (0.6.6-1) unstable; urgency=low

  * New upstream release
    - Includes Bastian Kleineidam's patch which fixes many bugs/typos in  xmlrev (closes: #285167, #285164, #285165)
    - Adds a man page for xmldiff and xmlrev (closes: #286558)
  * Removed python2.1-dev and python2.2-dev from build dependencies

 -- Alexandre Fayolle <afayolle@debian.org>  Wed, 22 Dec 2004 15:54:52 +0100

xmldiff (0.6.5-1) unstable; urgency=low

  * New upstream release (closes: #278830)
  * Put xmlrev in a separate package, with proper dependencies 
    (closes: #269343)
  * Fixed use of DH_OPTIONS in debian/rules (closes: #276904)
  * Updated build dependency on debhelper
  * Now suggests python-psyco
  * Changed section of xmldiff and xmldiff-xmlrev to text, where other xml
    related tools can be found
  * Updated debian/watch to version 2 of uupdaterol
  
  
 -- Alexandre Fayolle <afayolle@debian.org>  Wed, 10 Nov 2004 18:36:35 +0100

xmldiff (0.6.4-5) unstable; urgency=low

  * Changed the Build-Depends-Indep into Build-Depends (closes: #268592)

 -- Alexandre Fayolle <afayolle@debian.org>  Mon, 30 Aug 2004 11:43:27 +0200

xmldiff (0.6.4-4) unstable; urgency=low

  * First upload to debian  (closes: #267598)
  * New maintainer
