@@ -2,14 +2,16 @@ Source: xmldiff
 Section: misc
 Priority: optional
 Maintainer: Alexandre Fayolle <afayolle@debian.org>
-Build-Depends: debhelper (>= 5.0.0), python2.3-dev
+Build-Depends: debhelper (>= 5.0.37.1), python (>=2.3.5-7), python-dev (>=2.3.5-7), python-central
 Standards-Version: 3.7.2
+XS-Python-Version: current
 
 Package: xmldiff
 Architecture: all
-Depends: python (>= 2.3), python (<< 2.4), python2.3-xmldiff (>= ${Source-Version})
+Depends: ${python:Depends}
+XB-Python-Version: ${python:Versions}
 Suggests: xmldiff-xmlrev, python-psyco
-Description: Tree 2 tree correction between xml documents [dummy package]
+Description: tree to tree correction between xml documents
  Xmldiff is a utility for extracting differences between two xml
  files.  It returns a set of primitives to apply on source tree to
  obtain the destination tree.
@@ -25,37 +27,9 @@ Description: Tree 2 tree correction between xml documents [dummy package]
 
 Package: xmldiff-xmlrev
 Architecture: all
-Depends:  xmldiff | python2.3-xmldiff, libxml2-utils, xsltproc, sp
+Depends:  xmldiff, libxml2-utils, xsltproc, sp
 Recommends: docbook-xsl
 Description: xmldiff output formatter
  xmlrev can be used to display the differences between two XML
  documents computed by xmldiff as an HTML document.
 
-Package: xmldiff-test
-Architecture: all
-Section: python
-Depends: xmldiff (= ${Source-Version}) | python2.3-xmldiff (= ${Source-Version})
-Description: xmldiff's test files
- This package contains test files shared by the different versions of
- the xmldiff package. You don't need to install this package, unless
- you want to contribute to the development of xmldiff.
-
-Package: python2.3-xmldiff
-Conflicts: python2.3-logilab-xmldiff
-Replaces: python2.3-logilab-xmldiff
-Section: python
-Architecture: any
-Depends: python2.3, python2.3-xml
-Suggests: xmldiff-xmlrev, python2.3-psyco
-Description: Tree 2 tree correction between xml documents [built for python2.3]
- Xmldiff is a utility for extracting differences between two xml
- files.  It returns a set of primitives to apply on source tree to
- obtain the destination tree.
- .
- The implementation is based on _Change detection in hierarchically
- structured - information_, by S. Chawathe, A. Rajaraman,
- H. Garcia-Molina and J. Widom, - Stanford University, 1996
- .
- Homepage: http://www.logilab.org/projects/xmldiff
- . 
- This package is built with Python 2.3.
