@@ -1,5 +1,0 @@
-usr/lib/python2.3/site-packages
-usr/lib/python2.3/site-packages/logilab
-usr/lib/python2.3/site-packages/xmldiff
-usr/share/doc/python2.3-xmldiff
-usr/share/doc/python2.3-xmldiff/html
