@@ -1,30 +1,0 @@
-#! /bin/sh -e
-#
-# postinst script for Debian python packages.
-# Written 1998 by Gregor Hoffleit <flight@debian.org>.
-#
-VERSION=2.3
-DIRLIST="/usr/lib/python$VERSION/site-packages/xmldiff"
-
-touch /usr/lib/python$VERSION/site-packages/logilab/__init__.py
-
-case "$1" in
-    configure|abort-upgrade|abort-remove|abort-deconfigure)
-        for i in $DIRLIST ; do
-            python$VERSION -O /usr/lib/python$VERSION/compileall.py -q $i
-            python$VERSION /usr/lib/python$VERSION/compileall.py -q $i
-        done
-    ;;
-
-    *)
-        echo "postinst called with unknown argument \`$1'" >&2
-        exit 1
-    ;;
-esac
-
-
-
-
-#DEBHELPER#
-
-exit 0
