@@ -1,2 +1,0 @@
-usr/share/doc/xmldiff/
-usr/share/doc/xmldiff/test
