@@ -1,0 +1,1 @@
+usr/share/doc/python2.3-xmldiff/html
