@@ -1,0 +1,2 @@
+doc/*.txt
+doc/*.html
