@@ -2,8 +2,9 @@ xmldiff (0.6.8-2) unstable; urgency=low
 
   * updated standards to 3.7.2
   * use debhelper 5
+  * new python policy
 
- -- Alexandre Fayolle <afayolle@debian.org>  Mon, 22 May 2006 12:08:40 +0200
+ -- Alexandre Fayolle <afayolle@debian.org>  Thu, 15 Jun 2006 08:47:44 +0200
 
 xmldiff (0.6.8-1) unstable; urgency=low
 
